--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.2.13"
+    "inquirer": "^8.2.6",
+    "node-fetch": "^2.7.0"
   }
 }
